# AI-Resume-Portfolio-Builder

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
scripts/: smoke_test_gemini.py
services/: cover_letter_generator.py  llm_service.py  pdf_service.py  portfolio_generator.py  resume_generator.py
tests/: test_llm_service.py
ui/: forms.py  layout.py  styles.py
utils/: parser.py  validators.py
